добавил тороидальное поле

--- a/gggame_of.vcxproj
+++ b/gggame_of.vcxproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <ClCompile Include="Life.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Rule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Life.h" />
+    <ClInclude Include="Rule.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
