--- a/gggame_of.vcxproj.filters
+++ b/gggame_of.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Life.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Rule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Life.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
